qt/gen_qheaderview.h

class QAbstractItemModel;
class QHeaderView;
class QMetaObject;
class QPoint;
class QSize;
class QWidget;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QHeaderView QHeaderView;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
bool QHeaderView_override_virtual_connectNotify(void* self, intptr_t slot);
bool QHeaderView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QHeaderView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QHeaderView_delete(QHeaderView* self);