qt/gen_qheaderview.nim

proc fcQHeaderView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_connectNotify".}
proc fQHeaderView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QHeaderView_virtualbase_disconnectNotify".}
proc fcQHeaderView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QHeaderView_override_virtual_disconnectNotify".}
proc fcQHeaderView_delete(self: pointer) {.importc: "QHeaderView_delete".}


func init*(T: type QHeaderView, h: ptr cQHeaderView): QHeaderView =
  T(h: h)
proc create*(T: type QHeaderView, orientation: gen_qnamespace.Orientation): QHeaderView =

  QHeaderView.init(fcQHeaderView_new(cint(orientation)))
proc create*(T: type QHeaderView, orientation: gen_qnamespace.Orientation, parent: gen_qwidget.QWidget): QHeaderView =

  QHeaderView.init(fcQHeaderView_new2(cint(orientation), parent.h))
proc metaObject*(self: QHeaderView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQHeaderView_metaObject(self.h))

proc metacast*(self: QHeaderView, param1: cstring): pointer =

  fcQHeaderView_metacast(self.h, param1)

proc metacall*(self: QHeaderView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQHeaderView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QHeaderView, s: cstring): string =

  let v_ms = fcQHeaderView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QHeaderView, s: cstring): string =

  let v_ms = fcQHeaderView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setModel*(self: QHeaderView, model: gen_qabstractitemmodel.QAbstractItemModel): void =

  fcQHeaderView_setModel(self.h, model.h)

proc orientation*(self: QHeaderView, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQHeaderView_orientation(self.h))

proc offset*(self: QHeaderView, ): cint =

  fcQHeaderView_offset(self.h)

proc length*(self: QHeaderView, ): cint =

  fcQHeaderView_length(self.h)

proc sizeHint*(self: QHeaderView, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQHeaderView_sizeHint(self.h))

proc setVisible*(self: QHeaderView, v: bool): void =

  fcQHeaderView_setVisible(self.h, v)

proc sectionSizeHint*(self: QHeaderView, logicalIndex: cint): cint =

  fcQHeaderView_sectionSizeHint(self.h, logicalIndex)

proc visualIndexAt*(self: QHeaderView, position: cint): cint =

  fcQHeaderView_visualIndexAt(self.h, position)

proc logicalIndexAt*(self: QHeaderView, position: cint): cint =

  fcQHeaderView_logicalIndexAt(self.h, position)

proc logicalIndexAt2*(self: QHeaderView, x: cint, y: cint): cint =

  fcQHeaderView_logicalIndexAt2(self.h, x, y)

proc logicalIndexAtWithPos*(self: QHeaderView, pos: gen_qpoint.QPoint): cint =

  fcQHeaderView_logicalIndexAtWithPos(self.h, pos.h)

proc sectionSize*(self: QHeaderView, logicalIndex: cint): cint =

  fcQHeaderView_sectionSize(self.h, logicalIndex)

proc sectionPosition*(self: QHeaderView, logicalIndex: cint): cint =

  fcQHeaderView_sectionPosition(self.h, logicalIndex)

proc sectionViewportPosition*(self: QHeaderView, logicalIndex: cint): cint =

  fcQHeaderView_sectionViewportPosition(self.h, logicalIndex)

proc moveSection*(self: QHeaderView, fromVal: cint, to: cint): void =

  fcQHeaderView_moveSection(self.h, fromVal, to)

proc swapSections*(self: QHeaderView, first: cint, second: cint): void =

  fcQHeaderView_swapSections(self.h, first, second)

proc resizeSection*(self: QHeaderView, logicalIndex: cint, size: cint): void =

  fcQHeaderView_resizeSection(self.h, logicalIndex, size)

proc resizeSections*(self: QHeaderView, mode: QHeaderViewResizeMode): void =

  fcQHeaderView_resizeSections(self.h, cint(mode))

proc isSectionHidden*(self: QHeaderView, logicalIndex: cint): bool =

  fcQHeaderView_isSectionHidden(self.h, logicalIndex)

proc setSectionHidden*(self: QHeaderView, logicalIndex: cint, hide: bool): void =

  fcQHeaderView_setSectionHidden(self.h, logicalIndex, hide)

proc hiddenSectionCount*(self: QHeaderView, ): cint =

  fcQHeaderView_hiddenSectionCount(self.h)

proc hideSection*(self: QHeaderView, logicalIndex: cint): void =

  fcQHeaderView_hideSection(self.h, logicalIndex)

proc showSection*(self: QHeaderView, logicalIndex: cint): void =

  fcQHeaderView_showSection(self.h, logicalIndex)

proc count*(self: QHeaderView, ): cint =

  fcQHeaderView_count(self.h)

proc visualIndex*(self: QHeaderView, logicalIndex: cint): cint =

  fcQHeaderView_visualIndex(self.h, logicalIndex)

proc logicalIndex*(self: QHeaderView, visualIndex: cint): cint =

  fcQHeaderView_logicalIndex(self.h, visualIndex)

proc setSectionsMovable*(self: QHeaderView, movable: bool): void =

  fcQHeaderView_setSectionsMovable(self.h, movable)

proc sectionsMovable*(self: QHeaderView, ): bool =

  fcQHeaderView_sectionsMovable(self.h)

proc setFirstSectionMovable*(self: QHeaderView, movable: bool): void =

  fcQHeaderView_setFirstSectionMovable(self.h, movable)

proc isFirstSectionMovable*(self: QHeaderView, ): bool =

  fcQHeaderView_isFirstSectionMovable(self.h)

proc setSectionsClickable*(self: QHeaderView, clickable: bool): void =

  fcQHeaderView_setSectionsClickable(self.h, clickable)

proc sectionsClickable*(self: QHeaderView, ): bool =

  fcQHeaderView_sectionsClickable(self.h)

proc setHighlightSections*(self: QHeaderView, highlight: bool): void =

  fcQHeaderView_setHighlightSections(self.h, highlight)

proc highlightSections*(self: QHeaderView, ): bool =

  fcQHeaderView_highlightSections(self.h)

proc sectionResizeMode*(self: QHeaderView, logicalIndex: cint): QHeaderViewResizeMode =

  QHeaderViewResizeMode(fcQHeaderView_sectionResizeMode(self.h, logicalIndex))

proc setSectionResizeMode*(self: QHeaderView, mode: QHeaderViewResizeMode): void =

  fcQHeaderView_setSectionResizeMode(self.h, cint(mode))

proc setSectionResizeMode2*(self: QHeaderView, logicalIndex: cint, mode: QHeaderViewResizeMode): void =

  fcQHeaderView_setSectionResizeMode2(self.h, logicalIndex, cint(mode))

proc setResizeContentsPrecision*(self: QHeaderView, precision: cint): void =

  fcQHeaderView_setResizeContentsPrecision(self.h, precision)

proc resizeContentsPrecision*(self: QHeaderView, ): cint =

  fcQHeaderView_resizeContentsPrecision(self.h)

proc stretchSectionCount*(self: QHeaderView, ): cint =

  fcQHeaderView_stretchSectionCount(self.h)

proc setSortIndicatorShown*(self: QHeaderView, show: bool): void =

  fcQHeaderView_setSortIndicatorShown(self.h, show)

proc isSortIndicatorShown*(self: QHeaderView, ): bool =

  fcQHeaderView_isSortIndicatorShown(self.h)

proc setSortIndicator*(self: QHeaderView, logicalIndex: cint, order: gen_qnamespace.SortOrder): void =

  fcQHeaderView_setSortIndicator(self.h, logicalIndex, cint(order))

proc sortIndicatorSection*(self: QHeaderView, ): cint =

  fcQHeaderView_sortIndicatorSection(self.h)

proc sortIndicatorOrder*(self: QHeaderView, ): gen_qnamespace.SortOrder =

  gen_qnamespace.SortOrder(fcQHeaderView_sortIndicatorOrder(self.h))

proc stretchLastSection*(self: QHeaderView, ): bool =

  fcQHeaderView_stretchLastSection(self.h)

proc setStretchLastSection*(self: QHeaderView, stretch: bool): void =

  fcQHeaderView_setStretchLastSection(self.h, stretch)

proc cascadingSectionResizes*(self: QHeaderView, ): bool =

  fcQHeaderView_cascadingSectionResizes(self.h)

proc setCascadingSectionResizes*(self: QHeaderView, enable: bool): void =

  fcQHeaderView_setCascadingSectionResizes(self.h, enable)

proc defaultSectionSize*(self: QHeaderView, ): cint =

  fcQHeaderView_defaultSectionSize(self.h)

proc setDefaultSectionSize*(self: QHeaderView, size: cint): void =

  fcQHeaderView_setDefaultSectionSize(self.h, size)

proc resetDefaultSectionSize*(self: QHeaderView, ): void =

  fcQHeaderView_resetDefaultSectionSize(self.h)

proc minimumSectionSize*(self: QHeaderView, ): cint =

  fcQHeaderView_minimumSectionSize(self.h)

proc setMinimumSectionSize*(self: QHeaderView, size: cint): void =

  fcQHeaderView_setMinimumSectionSize(self.h, size)

proc maximumSectionSize*(self: QHeaderView, ): cint =

  fcQHeaderView_maximumSectionSize(self.h)

proc setMaximumSectionSize*(self: QHeaderView, size: cint): void =

  fcQHeaderView_setMaximumSectionSize(self.h, size)

proc defaultAlignment*(self: QHeaderView, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQHeaderView_defaultAlignment(self.h))

proc setDefaultAlignment*(self: QHeaderView, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQHeaderView_setDefaultAlignment(self.h, cint(alignment))

proc doItemsLayout*(self: QHeaderView, ): void =

  fcQHeaderView_doItemsLayout(self.h)

proc sectionsMoved*(self: QHeaderView, ): bool =

  fcQHeaderView_sectionsMoved(self.h)

proc sectionsHidden*(self: QHeaderView, ): bool =

  fcQHeaderView_sectionsHidden(self.h)

proc saveState*(self: QHeaderView, ): seq[byte] =

  var v_bytearray = fcQHeaderView_saveState(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc restoreState*(self: QHeaderView, state: seq[byte]): bool =

  fcQHeaderView_restoreState(self.h, struct_miqt_string(data: cast[cstring](if len(state) == 0: nil else: unsafeAddr state[0]), len: csize_t(len(state))))

proc reset*(self: QHeaderView, ): void =

  fcQHeaderView_reset(self.h)

proc setOffset*(self: QHeaderView, offset: cint): void =

  fcQHeaderView_setOffset(self.h, offset)

proc setOffsetToSectionPosition*(self: QHeaderView, visualIndex: cint): void =

  fcQHeaderView_setOffsetToSectionPosition(self.h, visualIndex)

proc setOffsetToLastSection*(self: QHeaderView, ): void =

  fcQHeaderView_setOffsetToLastSection(self.h)

proc headerDataChanged*(self: QHeaderView, orientation: gen_qnamespace.Orientation, logicalFirst: cint, logicalLast: cint): void =

  fcQHeaderView_headerDataChanged(self.h, cint(orientation), logicalFirst, logicalLast)

proc sectionMoved*(self: QHeaderView, logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint): void =

  fcQHeaderView_sectionMoved(self.h, logicalIndex, oldVisualIndex, newVisualIndex)

proc miqt_exec_callback_QHeaderView_sectionMoved(slot: int, logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint) {.exportc.} =
  type Cb = proc(logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = logicalIndex

  let slotval2 = oldVisualIndex

  let slotval3 = newVisualIndex


  nimfunc[](slotval1, slotval2, slotval3)

proc onsectionMoved*(self: QHeaderView, slot: proc(logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint)) =
  type Cb = proc(logicalIndex: cint, oldVisualIndex: cint, newVisualIndex: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQHeaderView_connect_sectionMoved(self.h, cast[int](addr tmp[]))
proc sectionResized*(self: QHeaderView, logicalIndex: cint, oldSize: cint, newSize: cint): void =

  fcQHeaderView_sectionResized(self.h, logicalIndex, oldSize, newSize)

proc miqt_exec_callback_QHeaderView_sectionResized(slot: int, logicalIndex: cint, oldSize: cint, newSize: cint) {.exportc.} =
  type Cb = proc(logicalIndex: cint, oldSize: cint, newSize: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = logicalIndex

  let slotval2 = oldSize

  let slotval3 = newSize


  nimfunc[](slotval1, slotval2, slotval3)

proc onsectionResized*(self: QHeaderView, slot: proc(logicalIndex: cint, oldSize: cint, newSize: cint)) =
  type Cb = proc(logicalIndex: cint, oldSize: cint, newSize: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQHeaderView_connect_sectionResized(self.h, cast[int](addr tmp[]))
proc sectionPressed*(self: QHeaderView, logicalIndex: cint): void =

  fcQHeaderView_sectionPressed(self.h, logicalIndex)
